--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@vue/cli-plugin-eslint": "^3.12.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
@@ -40,13 +43,13 @@
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.2",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
+    "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.2",
@@ -74,6 +77,7 @@
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.0.7",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-class": "^0.3.2"
   }
 }
